--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "metalsmith-prism": "^3.0.1",
     "metalsmith-sitemap": "^1.2.0",
     "metalsmith-watch": "^1.0.3",
+    "metalsmith-mdinclude": "^0.1.0",
     "node-fs-extra": "^0.8.1"
   }
 }
