--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/os-js/os.js.org#readme",
   "dependencies": {
+    "gitbook": "^3.2.3",
+    "gitbook-cli": "^2.3.2",
+    "gitbook-plugin-ga": "^2.0.0",
+    "gitbook-plugin-sitemap": "https://github.com/andersevenrud/plugin-sitemap.git#master",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-collections": "^0.9.0",
@@ -27,13 +31,11 @@
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-less": "^2.0.0",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-mdinclude": "^0.1.0",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-prism": "^3.0.1",
     "metalsmith-sitemap": "^1.2.0",
     "metalsmith-watch": "^1.0.3",
-    "metalsmith-mdinclude": "^0.1.0",
-    "node-fs-extra": "^0.8.1",
-    "gitbook-plugin-ga": "^2.0.0",
-    "gitbook-plugin-sitemap": "https://github.com/andersevenrud/plugin-sitemap.git#master"
+    "node-fs-extra": "^0.8.1"
   }
 }
