--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "gitbook": "^3.2.3",
     "gitbook-cli": "^2.3.2",
+    "gitbook-plugin-adsense": "^1.0.3",
     "gitbook-plugin-ga": "^2.0.0",
     "gitbook-plugin-sitemap": "https://github.com/andersevenrud/plugin-sitemap.git#master",
     "handlebars": "^4.0.5",
