--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "gitbook": "^3.2.3",
     "gitbook-cli": "^2.3.2",
     "gitbook-plugin-adsense": "^1.0.3",
-    "gitbook-plugin-ga": "^2.0.0",
-    "gitbook-plugin-sitemap": "https://github.com/andersevenrud/plugin-sitemap.git#master",
-    "handlebars": "^4.0.5",
+    "gitbook-plugin-alerts": "^0.2.0",
+    "gitbook-plugin-codepen": "^0.1.2",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-ga": "^1.0.1",
+    "gitbook-plugin-sitemap": "git+https://github.com/andersevenrud/plugin-sitemap.git#master",
+    "handlebars": "^4.1.2",
     "metalsmith": "^2.1.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-ignore": "^0.1.2",
@@ -35,7 +38,7 @@
     "metalsmith-mdinclude": "^0.1.0",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-prism": "^3.0.1",
-    "metalsmith-sitemap": "^1.2.0",
+    "metalsmith-sitemap": "^1.2.2",
     "metalsmith-watch": "^1.0.3",
     "node-fs-extra": "^0.8.1"
   }
