--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,3 +109,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          cname: manual.os-js.org
