deploy: 1e0e33c2472207d5832e350617cfb0106a8f5eab

--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "L68Q7G20PLVW5"
+                "identifierName": "L68QHF4GI4N93"
               },
-              "name": "L68Q7G20PLVW5"
+              "name": "L68QHF4GI4N93"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "L68Q7G20PLVW5"
+                "identifierName": "L68QHF4GI4N93"
               },
-              "name": "L68Q7G20PLVW5"
+              "name": "L68QHF4GI4N93"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L68Q7G20PLVW5",
+      "value": "L68QHF4GI4N93",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L68Q7G20PLVW5",
+      "value": "L68QHF4GI4N93",
       "start": 1643,
       "end": 1656,
       "loc": {
