deploy: bce848e8f4e6923b8e748b3dec0adb38eefb9776

--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "L6MSGA89DA77N"
+                "identifierName": "L6MSL9WPY25ZT"
               },
-              "name": "L6MSGA89DA77N"
+              "name": "L6MSL9WPY25ZT"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "L6MSGA89DA77N"
+                "identifierName": "L6MSL9WPY25ZT"
               },
-              "name": "L6MSGA89DA77N"
+              "name": "L6MSL9WPY25ZT"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L6MSGA89DA77N",
+      "value": "L6MSL9WPY25ZT",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L6MSGA89DA77N",
+      "value": "L6MSL9WPY25ZT",
       "start": 1643,
       "end": 1656,
       "loc": {
