deploy: 8562f606fed6f3399f8a28eaba1a97edbcf4a06b

--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "L6MSMZM7KCIT8"
+                "identifierName": "L6MT1F0XLSHQK"
               },
-              "name": "L6MSMZM7KCIT8"
+              "name": "L6MT1F0XLSHQK"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "L6MSMZM7KCIT8"
+                "identifierName": "L6MT1F0XLSHQK"
               },
-              "name": "L6MSMZM7KCIT8"
+              "name": "L6MT1F0XLSHQK"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L6MSMZM7KCIT8",
+      "value": "L6MT1F0XLSHQK",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L6MSMZM7KCIT8",
+      "value": "L6MT1F0XLSHQK",
       "start": 1643,
       "end": 1656,
       "loc": {
