deploy: 7420f51977e1c7d13d0c9c8dc8edcbc46ec73e6a

--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "L992IYN0XNQLW"
+                "identifierName": "L9BPATBIC743R"
               },
-              "name": "L992IYN0XNQLW"
+              "name": "L9BPATBIC743R"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "L992IYN0XNQLW"
+                "identifierName": "L9BPATBIC743R"
               },
-              "name": "L992IYN0XNQLW"
+              "name": "L9BPATBIC743R"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L992IYN0XNQLW",
+      "value": "L9BPATBIC743R",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "L992IYN0XNQLW",
+      "value": "L9BPATBIC743R",
       "start": 1643,
       "end": 1656,
       "loc": {
