--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "LI99SNIE2UZC6"
+                "identifierName": "LKVOADQWLBXWH"
               },
-              "name": "LI99SNIE2UZC6"
+              "name": "LKVOADQWLBXWH"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "LI99SNIE2UZC6"
+                "identifierName": "LKVOADQWLBXWH"
               },
-              "name": "LI99SNIE2UZC6"
+              "name": "LKVOADQWLBXWH"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "LI99SNIE2UZC6",
+      "value": "LKVOADQWLBXWH",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "LI99SNIE2UZC6",
+      "value": "LKVOADQWLBXWH",
       "start": 1643,
       "end": 1656,
       "loc": {
