deploy: 10305b144fd1874d97b24e0996d97979bc471eae

--- a/api/osjs-server/ast/source/providers/settings.js.json
+++ b/api/osjs-server/ast/source/providers/settings.js.json
@@ -159,9 +159,9 @@
                   "line": 32,
                   "column": 25
                 },
-                "identifierName": "LR86KAZV7GM9T"
+                "identifierName": "LR86L3VD4YZCA"
               },
-              "name": "LR86KAZV7GM9T"
+              "name": "LR86L3VD4YZCA"
             }
           }
         ],
@@ -300,9 +300,9 @@
                   "line": 33,
                   "column": 39
                 },
-                "identifierName": "LR86KAZV7GM9T"
+                "identifierName": "LR86L3VD4YZCA"
               },
-              "name": "LR86KAZV7GM9T"
+              "name": "LR86L3VD4YZCA"
             }
           }
         ],
@@ -3934,7 +3934,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "LR86KAZV7GM9T",
+      "value": "LR86L3VD4YZCA",
       "start": 1581,
       "end": 1594,
       "loc": {
@@ -4170,7 +4170,7 @@
         "postfix": false,
         "binop": null
       },
-      "value": "LR86KAZV7GM9T",
+      "value": "LR86L3VD4YZCA",
       "start": 1643,
       "end": 1656,
       "loc": {
